--- a/laravel/.gitignore
+++ b/laravel/.gitignore
@@ -1,3 +1,5 @@
+/css
+/js
 /node_modules
 /public/hot
 /public/storage
@@ -11,4 +13,5 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
+
 
