Tailwind CSS working.

--- a/laravel/public/mix-manifest.json
+++ b/laravel/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=80c72b6d7085eddc187c",
-    "/css/app.css": "/css/app.css?id=e7f813d0089d4920d755"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
